--- a/microservices/cloud-arbiter/package.json
+++ b/microservices/cloud-arbiter/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.5",
     "@grpc/proto-loader": "^0.7.13",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "hashi-vault-js": "^0.4.16"
   }
 }
