--- a/microservices/cloud-scribe/package.json
+++ b/microservices/cloud-scribe/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "fluent-logger": "^3.4.1"
+    "fluent-logger": "^3.4.1",
+    "mongodb": "^6.12.0"
   }
 }
