--- a/microservices/cloud-scribe/package.json
+++ b/microservices/cloud-scribe/package.json
@@ -14,6 +14,7 @@
     "@grpc/grpc-js": "^1.12.5",
     "@grpc/proto-loader": "^0.7.13",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-logger": "^3.4.1",
